--- a/autojs/src/main/AndroidManifest.xml
+++ b/autojs/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
     <application>
         <activity
             android:name=".execution.ScriptExecuteActivity"
-            android:configChanges="fontScale|keyboard|keyboardHidden|locale|navigation|orientation|screenLayout|screenSize|uiMode"
+            android:configChanges="fontScale|keyboard|keyboardHidden|locale|layoutDirection|navigation|orientation|screenLayout|screenSize|uiMode"
             android:theme="@style/ScriptTheme" />
 
 
